--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -5,6 +5,25 @@
 .contact-title {
     text-align: center!important;
     margin-bottom: 80px;
+    min-height: 200px;
+}
+
+.form {
+    background: #fff;
+    padding: 15px;
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    height: 355px;
+}
+
+.contact {
+    background: #fff;
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+    padding: 20px;
+    height: 450px;
 }
 
 .single-address > i {
@@ -17,6 +36,7 @@
     text-align: center;
     font-size: 20px;
     margin-top: 20px;
+    margin-left: 20px;
 }
 
 .fa {
