--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,6 +1,46 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .home-background {
-    background-image: url("https://edecorati.com/data/out/263/galaxy-wallpaper-hd_292848224.jpg");
-    background-repeat: no-repeat;
+    position: relative;
     width: 100%;
-    height: 550px;
+    min-height: 630px;
+    background-image: url("../images/background-1.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.home-section {
+    position: relative;
+    width: 100%;
+    min-height: 630px;
+    background-color: rgba(52, 58, 64, 0.9);
+}
+
+.container {
+    padding-top: 120px;
+    width: 100%;
+}
+
+.home-title {
+    text-align: center;
+    min-height: 200px;
+    color: white;
+    width: 100%;
+    border: 1px solid #ffffff;
+}
+
+.home-title > h1 {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.color {
+    color: gold;
 }
