--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -32,7 +32,7 @@
     width: 100%;
 }
 
-.card {
+.profile-card .card {
     background-color: transparent!important;
     border: 1px solid transparent;
 }
