--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -6,7 +6,7 @@
 .home-background {
     position: relative;
     width: 100%;
-    min-height: 630px;
+    min-height: 580px;
     background-image: url("../images/background-1.jpg");
     background-attachment: fixed;
     background-position: center;
@@ -16,7 +16,7 @@
 .home-section {
     position: relative;
     width: 100%;
-    min-height: 630px;
+    min-height: 580px;
     background-color: rgba(52, 58, 64, 0.9);
 }
 
@@ -26,6 +26,7 @@
 }
 
 .home-title {
+    position: relative;
     text-align: center;
     min-height: 200px;
     color: white;
@@ -43,4 +44,16 @@
 
 .color {
     color: gold;
+}
+
+.home-sub-title-left {
+    color: #ffffff;
+    float: left;
+    margin-left: 80px;
+}
+
+.home-sub-title-right {
+    color: #ffffff;
+    float: right;
+    margin-right: 80px;
 }
