--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -104,6 +104,7 @@
     border-bottom: 1px solid gold!important;
     border: none;
     margin-bottom: 5px;
+    border-radius: 0 !important;
 }
 
 .fa {
